--- a/comunidadeimpressionadora/templates/login.html
+++ b/comunidadeimpressionadora/templates/login.html
@@ -13,7 +13,7 @@
                         <div class="form-group">
                             {{ form_login.lemail.label(class="form-control-label") }}
 
-                            {% if form_login.lemail.errors %}
+                            {% if form_login.lemail.errors and LC == 'l' %}
                                 {{ form_login.lemail(class="form-control is-invalid") }}
                                 {% for erro in form_login.lemail.errors %}
                                     <div class="invalid-feedback">
@@ -28,7 +28,7 @@
                         </div>
                         <div class="form-group">
                             {{ form_login.lsenha.label(class="form-control-label") }}
-                            {% if form_login.lsenha.errors %}
+                            {% if form_login.lsenha.errors and LC == 'l' %}
                                 {{ form_login.lsenha(class="form-control is-invalid") }}
                                 {% for erro in form_login.lsenha.errors %}
                                     <div class="invalid-feedback">
@@ -54,7 +54,7 @@
                     <fieldset>
                         <div class="form-group">
                             {{ form_criarconta.username.label(class="form-control-label") }}
-                            {% if form_criarconta.username.errors %}
+                            {% if form_criarconta.username.errors and LC == 'c' %}
                                 {{ form_criarconta.username(class="form-control is-invalid") }}
                                 {% for erro in form_criarconta.username.errors %}
                                     <div class="invalid-feedback">
@@ -67,7 +67,7 @@
                         </div>
                         <div class="form-group">
                             {{ form_criarconta.email.label(class="form-control-label") }}
-                            {% if form_criarconta.email.errors %}
+                            {% if form_criarconta.email.errors and LC == 'c' %}
                                 {{ form_criarconta.email(class="form-control is-invalid") }}
                                 {% for erro in form_criarconta.email.errors %}
                                     <div class="invalid-feedback">
@@ -80,7 +80,7 @@
                         </div>
                         <div class="form-group">
                             {{ form_criarconta.senha.label(class="form-control-label") }}
-                            {% if form_criarconta.senha.errors %}
+                            {% if form_criarconta.senha.errors and LC == 'c' %}
                                 {{ form_criarconta.senha(class="form-control is-invalid") }}
                                 {% for erro in form_criarconta.senha.errors %}
                                     <div class="invalid-feedback">
@@ -93,7 +93,7 @@
                         </div>
                         <div class="form-group">
                             {{ form_criarconta.confirmacao_senha.label(class="form-control-label") }}
-                            {% if form_criarconta.confirmacao_senha.errors %}
+                            {% if form_criarconta.confirmacao_senha.errors and LC == 'c' %}
                                 {{ form_criarconta.confirmacao_senha(class="form-control is-invalid") }}
                                 {% for erro in form_criarconta.confirmacao_senha.errors %}
                                     <div class="invalid-feedback">
