--- a/comunidadeimpressionadora/templates/navbar.html
+++ b/comunidadeimpressionadora/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div style="width: 90vw; max-width: 100vw;" class="container-fluid container">
-    <a class="navbar-brand" href="{{ url_for('home') }}"> <span class="bi bi-globe"></span> </a>
+  <div class="container-fluid container">
+    <a class="navbar-brand" href="{{ url_for('home') }}">Comunidade Impressionadora</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
