redirect apos login

--- a/comunidadeimpressionadora/templates/login.html
+++ b/comunidadeimpressionadora/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h1>Faça Login ou Crie sua Conta para continuar</h1>
+        <h1>Faça Login ou Crie sua Conta para dd continuar</h1>
         <hr>
         <div class="row">
             <div class="col">
@@ -11,29 +11,32 @@
                     <legend>Login</legend>
                     <fieldset>
                         <div class="form-group">
-                            {{ form_login.email.label(class="form-control-label") }}
-                            {% if form_login.email.errors %}
-                                {{ form_login.email(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for erro in form_login.email.errors %}
-                                    {{ erro }}
-                                {% endfor %}
-                            </div>
+                            {{ form_login.lemail.label(class="form-control-label") }}
+
+                            {% if form_login.lemail.errors %}
+                                {{ form_login.lemail(class="form-control is-invalid") }}
+                                
+                                    <div class="invalid-feedback">
+                                        {{ form_login.lemail.errors[0] }}
+                                    </div>
+                                
                             {% else %}
-                                {{ form_login.email(class="form-control") }}
+                                {{ form_login.lemail(class="form-control") }}
                             {% endif %}
+
+
                         </div>
                         <div class="form-group">
-                            {{ form_login.senha.label(class="form-control-label") }}
-                            {% if form_login.senha.errors %}
-                                {{ form_login.senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for erro in form_login.senha.errors %}
-                                    {{ erro }}
+                            {{ form_login.lsenha.label(class="form-control-label") }}
+                            {% if form_login.lsenha.errors %}
+                                {{ form_login.lsenha(class="form-control is-invalid") }}
+                                {% for erro in form_login.lsenha.errors %}
+                                    <div class="invalid-feedback">
+                                        {{ erro }}
+                                    </div>
                                 {% endfor %}
-                            </div>
                             {% else %}
-                                {{ form_login.senha(class="form-control") }}
+                                {{ form_login.lsenha(class="form-control") }}
                             {% endif %}
                         </div>
                         <div class="form-group">
@@ -53,11 +56,11 @@
                             {{ form_criarconta.username.label(class="form-control-label") }}
                             {% if form_criarconta.username.errors %}
                                 {{ form_criarconta.username(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
                                 {% for erro in form_criarconta.username.errors %}
-                                    {{ erro }}
+                                    <div class="invalid-feedback">
+                                        {{ erro }}
+                                    </div>
                                 {% endfor %}
-                            </div>
                             {% else %}
                                 {{ form_criarconta.username(class="form-control") }}
                             {% endif %}
@@ -66,11 +69,11 @@
                             {{ form_criarconta.email.label(class="form-control-label") }}
                             {% if form_criarconta.email.errors %}
                                 {{ form_criarconta.email(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
                                 {% for erro in form_criarconta.email.errors %}
-                                    {{ erro }}
+                                    <div class="invalid-feedback">
+                                        {{ erro }}
+                                    </div>
                                 {% endfor %}
-                            </div>
                             {% else %}
                                 {{ form_criarconta.email(class="form-control") }}
                             {% endif %}
@@ -79,11 +82,11 @@
                             {{ form_criarconta.senha.label(class="form-control-label") }}
                             {% if form_criarconta.senha.errors %}
                                 {{ form_criarconta.senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
                                 {% for erro in form_criarconta.senha.errors %}
-                                    {{ erro }}
+                                    <div class="invalid-feedback">
+                                        {{ erro }}
+                                    </div>
                                 {% endfor %}
-                            </div>
                             {% else %}
                                 {{ form_criarconta.senha(class="form-control") }}
                             {% endif %}
@@ -92,11 +95,11 @@
                             {{ form_criarconta.confirmacao_senha.label(class="form-control-label") }}
                             {% if form_criarconta.confirmacao_senha.errors %}
                                 {{ form_criarconta.confirmacao_senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
                                 {% for erro in form_criarconta.confirmacao_senha.errors %}
-                                    {{ erro }}
+                                    <div class="invalid-feedback">
+                                        {{ erro }}
+                                    </div>
                                 {% endfor %}
-                            </div>
                             {% else %}
                                 {{ form_criarconta.confirmacao_senha(class="form-control") }}
                             {% endif %}
