--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -6,15 +6,20 @@
     <title>Comunidade Impressionadora</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     {% block head %}
     {% endblock %}
 </head>
 <body>
 
-    {% include 'navbar.html' %}
+    
 
     <div class="container">
+    
+    	{% include 'navbar.html' %}
+    	
         {% with mensagens = get_flashed_messages(with_categories=True) %}
             {% if mensagens %}
                 {% for categoria, mensagem in mensagens %}
