--- a/comunidadeimpressionadora/templates/navbar.html
+++ b/comunidadeimpressionadora/templates/navbar.html
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid container">
-    <a class="navbar-brand" href="{{ url_for('home') }}">Comunidade Impressionadora</a>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"><span class="bi bi-list"></span></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -14,12 +17,29 @@
         </li>
       </ul>
       <ul class="d-flex navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('login') }}">Criar Conta</a>
-        </li>
+        {% if current_user.is_authenticated %}
+        	<li class="nav-item">
+	          <a class="nav-link" href="{{ url_for('criar_post') }}">Criar Post</a>
+	        </li>
+	        
+	        <li class="nav-item">
+	          <a class="nav-link" href="{{ url_for('perfil') }}">Meu Perfil</a>
+	        </li>
+	        
+	        <li class="nav-item">
+	          <a class="nav-link" href="{{ url_for('sair') }}">Sair</a>
+	        </li>
+        	
+        {% else %}
+        
+	        <li class="nav-item">
+	          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="{{ url_for('login') }}">Criar Conta</a>
+	        </li>
+	    
+	    {% endif %}
       </ul>
     </div>
   </div>
