--- a/comunidadeimpressionadora/templates/usuarios.html
+++ b/comunidadeimpressionadora/templates/usuarios.html
@@ -6,7 +6,7 @@
         <div class="container">
             <h1>Usuários</h1>
             {% for usuario in lista_usuarios %}
-                <strong>{{ usuario }}</strong>
+                <strong>{{ usuario.id }} - {{ usuario.username }} </strong><span> = {{ usuario.email }}, {{ usuario.senha }}</span>
                 <hr>
             {% endfor %}
         </div>
