--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -9,6 +9,8 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='perfil.css') }}">
+
     {% block head %}
     {% endblock %}
 </head>
@@ -30,10 +32,13 @@
             {% endif %}
         {% endwith %}
     </div>
+    <div class="container">
 
-    {% block body %}
-    {% endblock %}
+        {% block body %}
+        {% endblock %}
 
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
