--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -77,6 +77,7 @@
         #info ul {
             display: flex;
             width: 100%;
+            height: 100%;
             margin-top: 8px;
             border-top: 1px solid black;
             justify-content: space-evenly;
